added styles and components

--- a/src/app/ma-app-download/ma-app-download.component.html
+++ b/src/app/ma-app-download/ma-app-download.component.html
@@ -1,23 +1,26 @@
 <div class="ma-app-download">
     <div class="ma_flex--container">
-        <div class="ma_flex__item--inherit col-1">
-            Logo
+        <div class="ma_flex__item--inherit ma_flex__item--vcenter justify-content-center col-1">
+            <img src="../../assets/images/logo-white.png">
         </div>
         <div class="ma_flex__item">
             <div class="app-download-details">
                 <div class="ma_flex--container flex-column">
                     <div class="ma_flex__item--inherit">
-                        <h2>Have you got the app?</h2>
+                        <div class="ma_flex--container flex-column section-header--small">
+                            <div class="ma_flex__item--inherit ma_flex__item--vcenter"><h1 class="ma__heading-1">Have you got the app?</h1></div>
+                            <div class="ma_flex__item--inherit ma_flex__item--vcenter"><h2 class="ma__heading-2">Get yours now - available on the iOS and Android app stores!</h2></div>
+                        </div>
                     </div>
-                    <div class="ma_flex__item--inherit">
-                        <h3>Get yours now - available on the iOS and Android app stores!</h3>
-                    </div>
-                    <div class="ma_flex__item--inherit">
-                        <button  mat-flat-button color="accent">App Store</button>
-                        <button  mat-flat-button color="accent">Google Play</button>
+                    <div class="ma_flex__item--inherit logo-section">
+                        <img src="../../assets/images/appstore.png">
+                        <img src="../../assets/images/gplay.png">
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="background-logo">
+        <img src="../../assets/images/logo-grey.png">
     </div>
 </div>
