--- a/src/app/ma-footer/ma-footer.component.html
+++ b/src/app/ma-footer/ma-footer.component.html
@@ -1,77 +1,109 @@
 <div class="ma-footer">
     <div class="footer-links">
         <div class="row">
-            <div class="col-md-3 col-1">
-                <h2>Company</h2>
+            <div class="col-md-3 ma-col-1">
+                <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Company</h3>
                 <div class="ma_flex--container flex-column">
                     <div class="ma_flex__item--inherit">
-                        About
+                        <h3 class="ma__heading-3 ma-txt__white">About</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Blog
+                        <h3 class="ma__heading-3 ma-txt__white">Blog</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Careers
+                        <h3 class="ma__heading-3 ma-txt__white">Careers</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Report
+                        <h3 class="ma__heading-3 ma-txt__white">Report</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Contact
+                        <h3 class="ma__heading-3 ma-txt__white">Contact</h3>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-2">
-                <h2>Company</h2>
+            <div class="col-md-3 ma-col-2">
+                <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Company</h3>
                 <div class="ma_flex--container flex-column">
                     <div class="ma_flex__item--inherit">
-                        About
+                        <h3 class="ma__heading-3 ma-txt__white">About</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Blog
+                        <h3 class="ma__heading-3 ma-txt__white">Blog</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Careers
+                        <h3 class="ma__heading-3 ma-txt__white">Careers</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Report
+                        <h3 class="ma__heading-3 ma-txt__white">Report</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Contact
+                        <h3 class="ma__heading-3 ma-txt__white">Contact</h3>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-3">
-                <h2>Company</h2>
+            <div class="col-md-3 ma-col-3">
+                <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Company</h3>
                 <div class="ma_flex--container flex-column">
                     <div class="ma_flex__item--inherit">
-                        About
+                        <h3 class="ma__heading-3 ma-txt__white">About</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Blog
+                        <h3 class="ma__heading-3 ma-txt__white">Blog</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Careers
+                        <h3 class="ma__heading-3 ma-txt__white">Careers</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Report
+                        <h3 class="ma__heading-3 ma-txt__white">Report</h3>
                     </div>
                     <div class="ma_flex__item--inherit">
-                        Contact
+                        <h3 class="ma__heading-3 ma-txt__white">Contact</h3>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-4">
-                <h2>Be Social With Us</h2>
+            <div class="col-md-3 ma-col-4">
+                <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Be Social With Us</h3>
                 <div class="ma_flex--container flex-column">
                     <div class="ma_flex__item--inherit">
-                        Social media links
+                        <div class="social-media-links">
+                            <div class="link-circle ma-mr-10">f</div>
+                            <div class="link-circle ma-mr-10">f</div>
+                            <div class="link-circle ma-mr-10">f</div>
+                            <div class="link-circle ma-mr-10">f</div>
+                        </div> 
                     </div>
                     <div class="ma_flex__item--inherit">
-                        <button  mat-flat-button color="accent">Sign up to our newsletter</button>
+                        <button  mat-flat-button color="">Sign up to our newsletter</button>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="footer-payment">
+        <div class="ma_flex--container ma-w-100">
+            <div class="ma_flex__item ma_flex__item--vcenter p50">
+                <img src="../../assets/images/payment.png">
+            </div>
+            <div class="ma_flex__item ma_flex__item--vcenter p50">
+                <div class="ma_flex--container">
+                    <div class="ma_flex__item ma_flex__item--vcenter">
+                        <span class="ma-txt__body2 ma-txt__secondary quick-link __link">Online Shopping</span>
+                        <span class="ma-txt__body2 ma-txt__secondary quick-link __link">Promotions</span>
+                        <span class="ma-txt__body2 ma-txt__secondary quick-link __link">Privacy Policy</span>
+                        <span class="ma-txt__body2 ma-txt__secondary quick-link __link">Site Map</span>
+                        <span class="ma-txt__body2 ma-txt__secondary quick-link __link">Orders and Returns</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="footer-copyright">
+    <div class="ma_flex--container">
+        <div class="ma_flex__item ma_flex__item--vcenter">
+            <div class="ma-txt__body2 ma-txt__white">MULTY APP © 2020. All Rights Reserved. Designed by Optimo</div>
         </div>
     </div>
 </div>
