--- a/src/app/ma-image-card-secondary/ma-image-card-secondary.component.html
+++ b/src/app/ma-image-card-secondary/ma-image-card-secondary.component.html
@@ -1,5 +1,10 @@
 <div class="ma-image-card--secondary d-flex">
     <div class="card-inner-wrapper">
-        <span>Italian</span>
+        <h3 class="ma__heading-3 ma-txt__white">Italian</h3>
     </div>
+</div>
+<div class="secondary-card-details">
+    <p class="ma-txt__body2 ma-txt__secondary">Pellentesque luctus, purus a dictum venenatis, diam orci dictum orci, interdum lacinia ante massa eget odio. Quisque dolor mi,
+
+        tincidunt at pellentesque sed, varius vitae quam.</p>
 </div>
