--- a/src/app/ma-inner-header/ma-inner-header.component.html
+++ b/src/app/ma-inner-header/ma-inner-header.component.html
@@ -1,10 +1,10 @@
 <div class="ma-inner-header">
     <div class="row">
         <div class="col-md-2  d-flex align-items-center">
-            logo
+            <img src="../../assets/images/logo.png">
         </div>
-        <div class="col-md-8">
-            <div class="ma-search-panel ma--depth__1">
+        <div class="col-md-8 d-flex align-items-center">
+            <div class="ma-search-panel ma--depth__1 ma-w-100">
                 <div class="ma_flex--container">
                     <div class="ma_flex__item ma_flex__item--vcenter p20 cat-select-col">
                         <mat-form-field>
@@ -30,17 +30,17 @@
         </div>
         <div class="col-md-2  d-flex align-items-center">
             <div class="ma_flex--container">
-                <div class="ma_flex__item--inherit ma-pr-10">
+                <div class="ma_flex__item--inherit ma_flex__item--vcenter ma-pr-10">
                     <button class="btn-cart" mat-raised-button color="primary"
                         matBadge="6" matBadgePosition="after" matBadgeColor="accent">
-                        <i class="material-icons">menu</i>
+                        <i class="material-icons">shopping_cart</i>
                     </button>
                 </div>
                 <div class="ma_flex__item--inherit ma_flex__item--vcenter">
                     <div class="ma_flex--container flex-column">
                         <div class="ma_flex__item--inherit"><span class="opt-txt__body2">My Cart</span></div>
                         <div class="ma_flex__item--inherit">
-                            <h2 class="">$456.56</h2>
+                            <h3 class="ma__heading-3 ma-txt__primary">$456.56</h3>
                         </div>
                     </div>
                 </div>
