--- a/src/app/ma-top-categories/ma-top-categories.component.html
+++ b/src/app/ma-top-categories/ma-top-categories.component.html
@@ -2,7 +2,7 @@
 <div class="ma-top-categories">
     <div class="row">
         <div class="col-md-12">
-            <div class="ma_flex--container flex-column align-items-center top-categories-header">
+            <div class="ma_flex--container flex-column align-items-center top-categories-header section-header--small">
                 <div class="ma_flex__item--inherit ma_flex__item--vcenter"><h1 class="ma__heading-1">Top Categories</h1></div>
                 <div class="ma_flex__item--inherit ma_flex__item--vcenter"><h2 class="ma__heading-2  ma-txt__secondary">List of Top 10 Most Popular Search</h2></div>
             </div>
