--- a/src/app/ma-top-header/ma-top-header.component.html
+++ b/src/app/ma-top-header/ma-top-header.component.html
@@ -38,7 +38,7 @@
                             <div class="profile-avatar"><img src="../../assets/images/profile-avatar.jpg"></div>
                         </div>
                         <div class="ma_flex__item">
-                            <i class="material-icons">menu</i>
+                            <i class="material-icons">more_vert</i>
                         </div>
                     </div>
                 </div>
