--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -109,11 +109,11 @@
 
 @mixin typo-display-3($colorContrast: false, $usePreferred: true) {
   @include typo-preferred-font($usePreferred);
-  font-size: 24px;
+  font-size: 32px;
   font-weight: 500;
  /* line-height: 1.35em;*/
-  line-height: 24px;
-  letter-spacing: -0.02em;
+  line-height: 36px;
+  //letter-spacing: -0.02em;
 
   @if $colorContrast {
     opacity: 0.54;
@@ -122,10 +122,10 @@
 
 @mixin typo-display-2($colorContrast: false, $usePreferred: true) {
   @include typo-preferred-font($usePreferred);
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 500;
- /* line-height: 1.1em;*/
-  line-height: 20px;
+ /* line-height:0 1.1em;*/
+  line-height: 24px;
 
   @if $colorContrast {
     opacity: 0.54;
@@ -134,10 +134,10 @@
 
 @mixin typo-display-1($colorContrast: false, $usePreferred: true) {
   @include typo-preferred-font($usePreferred);
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 500;
   /*line-height: 1em;*/
-  line-height: 18px;
+  line-height: 20px;
 
   @if $colorContrast {
     opacity: 0.54;
@@ -217,22 +217,22 @@
 
 
   @include respond-to('x-small') {
-    font-size: 16px !important;
+    font-size: 16px;
     font-weight: 500 !important;
   }
 
   @include respond-to('small') {
-    font-size: 16px !important;
+    font-size: 16px;
     font-weight: 500 !important;
   }
 
   @include respond-to('medium') {
-    font-size: 16px !important;
+    font-size: 16px;
     font-weight: 500 !important;
   }
 
   @include respond-to('large') {
-    font-size: 16px !important;
+    font-size: 16px;
     font-weight: 500 !important;
   }
 
@@ -243,7 +243,7 @@
   }
 
  /* line-height: 20px;*/
-  line-height: 13px;
+  line-height: 16px;
   letter-spacing: 0;
 
   @if $colorContrast {
@@ -256,29 +256,29 @@
   @include typo-preferred-font($usePreferred);
 
   @include respond-to('x-small') {
-    font-size: 16px !important;
+    font-size: 16px;
     font-weight: 400 !important;
 
   }
   @include respond-to('small') {
-    font-size: 16px !important;
+    font-size: 16px;
     font-weight: 400 !important;
 
   }
 
   @include respond-to('medium') {
-    font-size: 16px !important;
+    font-size: 16px;
     font-weight: 400 !important;
   }
 
   @include respond-to('large') {
-    font-size: 16px !important;
+    font-size: 16px;
     font-weight: 400 !important;
   }
 
   //font-weight: 400;
   /*line-height: 18px;*/
-  line-height: 13px;
+  line-height: 16px;
   letter-spacing: 0;
 
   @if $colorContrast {
