--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -4,3 +4,15 @@
 .ma-pr-10{
     padding-right: 10px;
 }
+.ma-pl-10{
+    padding-left: 10px;
+}
+.ma-mr-10{
+    margin-right: 10px;
+}
+.ma-pl-20{
+    padding-left: 20px;
+}
+.ma-w-100{
+    width: 100%;
+}
