--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,5 +19,6 @@
 @import "components/image-card";
 @import "components/app-download";
 @import "components/footer";
+@import "components/carousel";
 
 @import "pages/landing-page";
