--- a/src/app/ma-image-card-full/ma-image-card-full.component.html
+++ b/src/app/ma-image-card-full/ma-image-card-full.component.html
@@ -3,17 +3,19 @@
         <div class="col-md-6">
             <div class="ma_flex--container flex-column">
                 <div class="ma_flex__item">
-                    <h1 class="ma__heading-1 ma-txt__primary">For Local Businesses</h1>
+                    <h1 class="card-title ma-txt__primary">For Local Businesses</h1>
                 </div>
                 <div class="ma_flex__item">
-                    <h2 class="ma__heading-2">Find out how to start growing your business with online ordering.</h2>
+                    <h2 class="card-description">Find out how to start growing your business with online ordering.</h2>
                 </div>
             </div>
         </div>
         <div class="col-md-6">
             <div class="ma_flex--container justify-content-end">
                 <div class="ma_flex__item--inherit">
-                    Logo
+                    <div class="card-logo">
+                        <img src="../../assets/images/logo.png">
+                    </div>                    
                 </div>
             </div>
         </div>
