--- a/src/app/ma-image-card-primary/ma-image-card-primary.component.html
+++ b/src/app/ma-image-card-primary/ma-image-card-primary.component.html
@@ -1,7 +1,7 @@
-<div class="ma-image-card--primary">
+<div class="ma-image-card--primary" >
     <div class="ma_flex--container">
         <div class="ma_flex__item">
-            <i class="icon-heart material-icons">star</i>
+            <i class="heart-icon material-icons">star</i>
         </div>
         <div class="ma_flex__item">
             <div class="ma_flex--container flex-column align-items-end">
@@ -9,7 +9,7 @@
                     <span class="ma-state-chip--primary">Open</span>
                 </div>
                 <div class="ma_flex__item">
-                    <span class="">Closes at 10:00 PM</span>
+                    <span class="ma-txt__tertiary ma-txt__body2-small">Closes at 10:00 PM</span>
                 </div>
             </div>
         </div>
@@ -17,25 +17,34 @@
     <div class="ma_flex--container card-details-section">
         <div class="ma_flex__item--inherit">
             <div class="ma_flex--container flex-column">
-                <div class="ma_flex__item">Star Style Salon</div>
                 <div class="ma_flex__item">
-                    <i class="icon-star ma-pr-10 material-icons">star</i>
-                    <i class="icon-star ma-pr-10 material-icons">star</i>
-                    <i class="icon-star ma-pr-10 material-icons">star</i>
-                    <i class="icon-star ma-pr-10 material-icons">star</i>
-                    <i class="icon-star ma-pr-10 material-icons">star_half</i>
+                    <div class="ma-txt__body2 ma-txt__white">Star Style Salon</div>
                 </div>
-                <div class="ma_flex__item">Appointment</div>
+                <div class="ma_flex__item">
+                    <div class="ma_flex--container">
+                        <div class="ma_flex__item ma_flex__item--vcenter">
+                            <i class="star-icon ma-pr-10 material-icons">star</i>
+                            <i class="star-icon ma-pr-10 material-icons">star</i>
+                            <i class="star-icon ma-pr-10 material-icons">star</i>
+                            <i class="star-icon ma-pr-10 material-icons">star</i>
+                            <i class="star-icon ma-pr-10 material-icons">star</i>
+                        </div>
+                        <div class="ma_flex__item ma_flex__item--vcenter">
+                            <div class="ma-txt__body2-small"><span class="ma-pr-10">4.0</span>[250+]</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ma_flex__item"><span class="ma-txt__body2-small ma-txt__primary">Appointment</span></div>
             </div>
         </div>
         <div class="ma_flex__item d-flex align-items-end">
-            <div class="ma_flex--container flex-column">
+            <div class="ma_flex--container flex-column ma-pl-20">
                 <div class="ma_flex__item ma_flex__item--vcenter">
-                    <i class="icon-star ma-pr-10 material-icons">place</i>
-                    <span class="">[3.5km]</span>
+                    <i class="icon-star ma-pr-5 material-icons">place</i>
+                    <span class="ma-txt__body2-small">[3.5km]</span>
                 </div>
                 <div class="ma_flex__item ma_flex__item--vcenter justify-content-end">
-                    Saloon
+                    <span class="ma-txt__body2-small">Saloon</span>
                 </div>
             </div>
         </div>
