--- a/src/app/ma-routing-project/ma-routing-project.component.html
+++ b/src/app/ma-routing-project/ma-routing-project.component.html
@@ -14,6 +14,7 @@
             <mat-list-item role="listitem"><a routerLink="/image-card-secondary" mat-button color="primary">Image Card Secondary</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/download-component" mat-button color="primary">App Download</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/footer" mat-button color="primary">Footer</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/carousel" mat-button color="primary">Carousel</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/landing-page" mat-button color="primary">Landing Page</a></mat-list-item>
         </mat-list>
     </mat-drawer>
