--- a/src/styles/components/_badges.scss
+++ b/src/styles/components/_badges.scss
@@ -1,5 +1,5 @@
 .ma-state-chip{
-    min-width: 30px;
+    min-width: 40px;
     height: 30px;
     padding: 0 10px;
     border-radius: 15px;
@@ -7,9 +7,10 @@
     align-items: center;
     justify-content: center;
     color: #fff;
+    font-size: 12px;
     &--primary{
         @extend .ma-state-chip;
-        background-color: #909cac;
+        background-color: #CDDC39;
     }
 } 
 .mat-chip{
