--- a/src/styles/components/_inner-header.scss
+++ b/src/styles/components/_inner-header.scss
@@ -26,15 +26,19 @@
         }
     }
     .btn-cart{
+        background-color: #FEEC0A;
+        color: #000;
         border-radius: 50%;
         min-width: unset;
-        max-width: 50px;
-        height: 50px;
+        max-width: 45px;
+        height: 45px;
         margin-right: 15px;
         display: flex;
         align-items: center;
         justify-content: center;
         .mat-badge-content{
+            background-color: #100832;
+            color: #fff;
             right:-10px;
             top: -5px;
         }
