--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "abstracts/mixins";
 @import "abstracts/flexbox";
 @import "abstracts/variables";
+@import "abstracts/icon-font";
 
 @import "base/reset";
 @import "base/misc";
