--- a/src/app/ma-image-card-primary/ma-image-card-primary.component.html
+++ b/src/app/ma-image-card-primary/ma-image-card-primary.component.html
@@ -1,52 +1,56 @@
-<div class="ma-image-card--primary" >
-    <div class="ma_flex--container">
-        <div class="ma_flex__item">
-            <i class="heart-icon material-icons">star</i>
-        </div>
-        <div class="ma_flex__item">
-            <div class="ma_flex--container flex-column align-items-end">
-                <div class="ma_flex__item">
-                    <span class="ma-state-chip--primary">Open</span>
-                </div>
-                <div class="ma_flex__item">
-                    <span class="ma-txt__tertiary ma-txt__body2-small">Closes at 10:00 PM</span>
-                </div>
+<div class="card-outer-wrapper">
+    <div class="card-image"></div>
+    <div class="ma-image-card--primary" >
+        <div class="ma_flex--container">
+            <div class="ma_flex__item">
+                <i class="heart-icon material-icons">star</i>
             </div>
-        </div>
-    </div>
-    <div class="ma_flex--container card-details-section">
-        <div class="ma_flex__item--inherit">
-            <div class="ma_flex--container flex-column">
-                <div class="ma_flex__item">
-                    <div class="ma-txt__body2 ma-txt__white">Star Style Salon</div>
-                </div>
-                <div class="ma_flex__item">
-                    <div class="ma_flex--container">
-                        <div class="ma_flex__item ma_flex__item--vcenter">
-                            <i class="star-icon ma-pr-10 material-icons">star</i>
-                            <i class="star-icon ma-pr-10 material-icons">star</i>
-                            <i class="star-icon ma-pr-10 material-icons">star</i>
-                            <i class="star-icon ma-pr-10 material-icons">star</i>
-                            <i class="star-icon ma-pr-10 material-icons">star</i>
-                        </div>
-                        <div class="ma_flex__item ma_flex__item--vcenter">
-                            <div class="ma-txt__body2-small"><span class="ma-pr-10">4.0</span>[250+]</div>
-                        </div>
+            <div class="ma_flex__item">
+                <div class="ma_flex--container flex-column align-items-end">
+                    <div class="ma_flex__item">
+                        <span class="ma-state-chip--primary">Open</span>
+                    </div>
+                    <div class="ma_flex__item">
+                        <span class="ma-txt__tertiary ma-txt__body2-small">Closes at 10:00 PM</span>
                     </div>
                 </div>
-                <div class="ma_flex__item"><span class="ma-txt__body2-small ma-txt__primary">Appointment</span></div>
             </div>
         </div>
-        <div class="ma_flex__item d-flex align-items-end">
-            <div class="ma_flex--container flex-column ma-pl-20">
-                <div class="ma_flex__item ma_flex__item--vcenter">
-                    <i class="icon-star ma-pr-5 material-icons">place</i>
-                    <span class="ma-txt__body2-small">[3.5km]</span>
+        <div class="ma_flex--container card-details-section">
+            <div class="ma_flex__item--inherit">
+                <div class="ma_flex--container flex-column">
+                    <div class="ma_flex__item">
+                        <div class="ma-txt__body2 ma-txt__white">Star Style Salon</div>
+                    </div>
+                    <div class="ma_flex__item">
+                        <div class="ma_flex--container">
+                            <div class="ma_flex__item ma_flex__item--vcenter">
+                                <i class="star-icon ma-pr-10 material-icons">star</i>
+                                <i class="star-icon ma-pr-10 material-icons">star</i>
+                                <i class="star-icon ma-pr-10 material-icons">star</i>
+                                <i class="star-icon ma-pr-10 material-icons">star</i>
+                                <i class="star-icon ma-pr-10 material-icons">star</i>
+                            </div>
+                            <div class="ma_flex__item ma_flex__item--vcenter">
+                                <div class="ma-txt__body2-small"><span class="ma-pr-10">4.0</span>[250+]</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ma_flex__item"><span class="ma-txt__body2-small ma-txt__primary">Appointment</span></div>
                 </div>
-                <div class="ma_flex__item ma_flex__item--vcenter justify-content-end">
-                    <span class="ma-txt__body2-small">Saloon</span>
+            </div>
+            <div class="ma_flex__item d-flex align-items-end">
+                <div class="ma_flex--container flex-column ma-pl-20">
+                    <div class="ma_flex__item ma_flex__item--vcenter">
+                        <i class="icon-star ma-pr-5 material-icons">place</i>
+                        <span class="ma-txt__body2-small">[3.5km]</span>
+                    </div>
+                    <div class="ma_flex__item ma_flex__item--vcenter justify-content-end">
+                        <span class="ma-txt__body2-small">Saloon</span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    
 </div>
