--- a/src/app/ma-image-card-secondary/ma-image-card-secondary.component.html
+++ b/src/app/ma-image-card-secondary/ma-image-card-secondary.component.html
@@ -1,6 +1,9 @@
-<div class="ma-image-card--secondary d-flex">
-    <div class="card-inner-wrapper">
-        <h3 class="ma__heading-3 ma-txt__white">Italian</h3>
+<div class="card-outer-wrapper">
+    <div class="card-image" style="background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.50) ), url('https://www.crushpixel.com/static12/preview2/food-ingredients-spices-cooking-delicious-802207.jpg') center"></div>
+    <div class="ma-image-card--secondary d-flex">
+        <div class="card-inner-wrapper">
+            <h3 class="ma__heading-3 ma-txt__white">Italian</h3>
+        </div>
     </div>
 </div>
 <div class="secondary-card-details">
