--- a/src/app/ma-inner-header/ma-inner-header.component.html
+++ b/src/app/ma-inner-header/ma-inner-header.component.html
@@ -1,9 +1,9 @@
 <div class="ma-inner-header">
     <div class="row">
-        <div class="col-md-2  d-flex align-items-center">
+        <div class="col-md-2 col-12 col-sm-2  d-flex align-items-center logo-col">
             <img src="../../assets/images/logo.png">
         </div>
-        <div class="col-md-8 d-flex align-items-center">
+        <div class="col-md-8 col-12 col-sm-10 d-flex align-items-center">
             <div class="ma-search-panel ma--depth__1 ma-w-100">
                 <div class="ma_flex--container">
                     <div class="ma_flex__item ma_flex__item--vcenter p20 cat-select-col">
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-2  d-flex align-items-center">
+        <div class="col-md-2 col-sm-12 col-12 d-flex align-items-center cart-total-col">
             <div class="ma_flex--container">
                 <div class="ma_flex__item--inherit ma_flex__item--vcenter ma-pr-10">
                     <button class="btn-cart" mat-raised-button color="primary"
