--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -54,7 +54,6 @@
         }
     }
     .navbar-item-body{
-        display: none !important;
         min-height: 440px;
         background-color: #E91E63;
         color: #fff;
@@ -63,6 +62,7 @@
         top: 60px;
         left: 0;
         z-index: 15;
+        display: none;
         >.row{
             min-height: 440px;;
         }
