--- a/src/styles/components/_image-card.scss
+++ b/src/styles/components/_image-card.scss
@@ -1,16 +1,35 @@
+.card-outer-wrapper{
+    overflow: hidden;
+    position: relative; 
+    margin: 5px;
+    .card-image{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.50) ), url('https://previews.123rf.com/images/stockbroker/stockbroker1411/stockbroker141100098/33469667-group-of-young-friends-shopping-outdoors-together.jpg');
+        background-size: contain;
+        background-size: cover;
+        transition: all 0.5s ease;
+    }
+    &:hover{
+        cursor: pointer;
+        .card-image{
+            transform: scale(1.2);
+        }
+    }
+}
 .ma-image-card{
     &--primary{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        background-color: #b4b4b4;
+        //background-color: #b4b4b4;
         padding: 15px;
         min-width: 300px;
         min-height: 200px;
-        background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.50) ), url('https://previews.123rf.com/images/stockbroker/stockbroker1411/stockbroker141100098/33469667-group-of-young-friends-shopping-outdoors-together.jpg');
-        background-size: contain;
-        background-size: cover;
+        //background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.50) ), url('https://previews.123rf.com/images/stockbroker/stockbroker1411/stockbroker141100098/33469667-group-of-young-friends-shopping-outdoors-together.jpg');
         
+        position: relative;
         .heart-icon{
             color: #E91E63;
         }
@@ -26,10 +45,9 @@
     }
     &--secondary{
         padding:15px;
-        background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.50) ), url('https://www.crushpixel.com/static12/preview2/food-ingredients-spices-cooking-delicious-802207.jpg') center;
-        background-size: contain;
-        background-size: cover;
         min-height: 150px;
+        position: relative;
+        transition: all 1s ease-out;
         .card-inner-wrapper{
             padding: 15px;
             border:1px dotted #fff;
