--- a/src/styles/components/_top-categories.scss
+++ b/src/styles/components/_top-categories.scss
@@ -43,6 +43,39 @@
             height: 100%;
             width: 100%;
             border-radius: 0px;
+            &:hover{
+                  i {
+                      
+                    &:after {
+                    transition: all 0.6s ease-out;
+                      right: 100%;
+                    }
+                  }
+            }
+            i {
+                display: inline-block;
+                position: relative;
+                overflow: hidden;
+                text-decoration: none;
+                
+                &:after {
+                  content: '';
+                  width: 20%;
+                  height: 100%;
+                  position: absolute;
+                  left: auto;
+                  top: 0;
+                  bottom: 0;
+                  right: -20%;
+                  background-image: 
+                    linear-gradient(150deg, 
+                      rgba(255,255,255,0),
+                      rgba(255,255,255,.8),
+                      rgba(255,255,255,0)
+                    );
+                }
+                
+              }
         }
     }
 }
